# FileShift

./: .gitignore  .pre-commit-config.yaml  README.md  README_BUILD.md  build_app.sh  build_app_cross_platform.sh  build_app_intel.sh  build_app_optimized.sh  fileshift.spec  generate_sample_data.py  json_to_csv_app.py  json_to_csv_converter.py  json_to_csv_multifile.py  json_to_csv_multifile_cocoa.py  json_to_csv_multifile_pyqt.py  json_to_csv_multifile_tkinter.py  json_to_csv_native.py  justfile  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: build.yml
.pytest_cache/v/cache/: lastfailed  nodeids
packaging/: fileshift.spec
samples/: README.md  application_logs.json  companies_large.csv  companies_large.json  companies_medium.csv  companies_medium.json  companies_small.csv  companies_small.json  deeply_nested.csv  deeply_nested.json  ecommerce_orders.csv  ecommerce_orders.json  financial_transactions.json  flat_users.json  healthcare_visits.json  iot_sensors.json  mixed_types.json  social_posts.json
src/: __init__.py  __main__.py  gui.py
src/converters/: __init__.py  base.py  handlers.py  operations.py
tests/: __init__.py  conftest.py  test_base.py  test_handlers.py  test_operations.py
