[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fileshift"
version = "0.2.0"
description = "GUI tool for converting and transforming JSON and CSV files"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "FileShift Team", email = "dev@example.com" }
]
dependencies = [
    "PyQt6>=6.0",
    "chardet>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0",
    "types-PyQt6",
    "ruff>=0.1.0",
    "black>=23.0",
    "isort>=5.0",
    "pre-commit>=3.0",
]

[project.scripts]
fileshift = "src.main:main"
fileshift-cli = "src.cli:main"

[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "PTH", # flake8-use-pathlib
    "PD",  # pandas-vet
    "PL",  # pylint
    "NPY", # NumPy-specific rules
]
ignore = [
    "E501",  # line too long (handled by black)
    "PLR0913", # Too many arguments to function call
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "dist",
    "build",
    "*.egg-info",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]  # Allow magic values and asserts in tests

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "PyQt6.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100